bug: fixed scrolling and text-wrap issue

--- a/src/index.css
+++ b/src/index.css
@@ -27,3 +27,12 @@ button {
   border-radius: 8px;
   font-size: 22px;
 }
+
+pre {
+  overflow-x: auto;
+  white-space: pre-wrap;
+  white-space: -moz-pre-wrap;
+  white-space: -pre-wrap;
+  white-space: -o-pre-wrap;
+  word-wrap: break-word;
+}
