--- a/src/pages/Chat/Chat.css
+++ b/src/pages/Chat/Chat.css
@@ -17,7 +17,10 @@
 }
 
 .chat-body {
+  width: 100vw;
+  flex-wrap: wrap;
   padding: 8px;
+  overflow-y: scroll;
 }
 
 .chat-message {
